--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -18,7 +18,7 @@
             border-radius: 50%;
             padding: 1px 5px;
             top: -7px;
-            right: 100%;
+            left: -35%;
         }
     </style>
 {% endblock %}
